--- a/TranslationBridge/main/templates/main/home.html
+++ b/TranslationBridge/main/templates/main/home.html
@@ -108,12 +108,13 @@
             <div class="container">
                 <div class="card">
                     <div class="imgBx">
+                    <!--
                         <span class="material-symbols-outlined">
                             account_circle
                         </span>
-                    <!--
-                        <img src="/static/images/translator-info-icon.png" alt="">
-                    -->  
+                    --> 
+                        <img src="{{translator.image.url}}" alt="">
+                     
                     </div>
                     <div class="content">
                         <h2>{{translator.name}}</h2>
@@ -121,7 +122,9 @@
                             <h5>{{translator.specialty}}</h5>
                         </div>
                         <p>{{translator.experience | truncatewords:50}}</p>
-                        <a href="{% url 'translators:translator_detail_view' translator.id %}">Read More</a>
+                            {% if request.user.is_authenticated %}
+                                <a href="{% url 'translators:translator_detail_view' translator.id %}">Read More</a>
+                            {% endif %}
                     </div>
                 </div>
             </div>
